# feather-protocol

./: .azure-pipelines.yml  Cargo.toml  build.rs
.github/workflows/: build.yml
generator/: Cargo.toml
generator/src/: compile.rs  generate.rs  integrate.rs  intermediate.rs  lib.rs  main.rs  model.rs  parse.rs  universalize.rs
generator/src/generate/: packet.rs
generator2/: Cargo.toml  build.rs
generator2/src/: lib.rs  packets.rs
generator2/src/packets/: generations.rs  integration.rs  parsing.rs
macros/: Cargo.toml
macros/src/: codegen.rs  hir.rs  lib.rs  mir.rs
packets/: 1.14.4.def  1.15.0.def  1.15.1.def  1.15.2.def
parser/: Cargo.toml
parser/src/: compile.rs  generate.rs  lib.rs  parse.rs
protocols/: 1.15.2.ron  README.md
src/: bla.txt  codec.rs  dump.txt  error.rs  generated.rs  io.rs  lib.rs  message.rs  packet.rs  packets.rs  provider.rs  types.rs
src/packets/: 1_15_2.rs  login.rs  send.rs  v1_14_4.rs  v1_15_1.rs  v1_15_2.rs
