[package]
name = "feather-protocol"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

byteorder = "1.3"

cfb8 = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
aes = { version = "0.4", optional = true }

[features]
codec = ["aes", "cfb8", "flate2"]

[workspace]
members = [".", "generator"]
