[package]
name = "feather-protocol-generator"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[lib]
name = "feather_protocol_generator"
path = "src/lib.rs"

[[bin]]
name = "feather-protocol-build"
path = "src/main.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = { git = "https://github.com/ron-rs/ron", rev = "d484cee08436ef27555378c2e1ad098d3563e0d2" }
anyhow = "1.0"

syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
indexmap = { version = "1.4", features = ["serde-1"] }
heck = "0.3"
